common-applications/freesky-icsl-hk-cluster/mindspore-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-website
  name: mindspore-website
