common-applications/freesky-icsl-hk-cluster/mindspore-website/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mindspore-website
  namespace: mindspore-website
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: mindsporewebsite
  template:
    metadata:
      labels:
        app: mindsporewebsite
    spec:
      containers:
      - name: websiteinfod
        image: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/mindspore/website:v1.0.20231010191807
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
