common-applications/freesky-icsl-hk-cluster/mindspore-website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websiteservice
  namespace: mindspore-website
spec:
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: mindsporewebsite
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: dsapi-service
  namespace: mindspore-website
spec:
  type: ExternalName
  externalName: dsapi.osinfra.cn
  ports:
  - port: 443

---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: mindspore-website
spec:
  type: ExternalName
  externalName: search.mindspore.myopeninfra.com
  ports:
  - port: 443
