common-applications/freesky-icsl-hk-cluster/mindspore-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rpm: 200
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Content-Type-Options "nosniff";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-inline' 'unsafe-eval' cdn.bootcss.com https://cdn.mathjax.org; object-src 'none'; frame-ancestors https://player.bilibili.com";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^~/resource/ https://gitee.com/mindspore/book redirect;
      rewrite ^/icla https://clasign.osinfra.cn/sign/Z2l0ZWUlMkZtaW5kc3BvcmU= redirect;
      rewrite ^/mindinsight$              https://mindspore.myopeninfra.com/mindinsight/docs/zh-CN/master/index.html   redirect;
      rewrite ^/mindinsight/en(/|$)(.*)   https://mindspore.myopeninfra.com/mindinsight/docs/en/master/index.html      redirect;
      rewrite ^/hub$                      https://mindspore.myopeninfra.com/hub/docs/zh-CN/master/index.html           redirect;
      rewrite ^/hub/en(/|$)(.*)           https://mindspore.myopeninfra.com/hub/docs/en/master/index.html              redirect;
      rewrite ^/mindarmour$               https://mindspore.myopeninfra.com/mindarmour/docs/zh-CN/master/index.html    redirect;
      rewrite ^/mindarmour/en(/|$)(.*)    https://mindspore.myopeninfra.com/mindarmour/docs/en/master/index.html       redirect;
      rewrite ^/federated$                https://mindspore.myopeninfra.com/federated/docs/zh-CN/master/index.html     redirect;
      rewrite ^/federated/en(/|$)(.*)     https://mindspore.myopeninfra.com/federated/docs/en/master/index.html        redirect;
      rewrite ^/serving$                  https://mindspore.myopeninfra.com/serving/docs/zh-CN/master/index.html       redirect;
      rewrite ^/serving/en(/|$)(.*)       https://mindspore.myopeninfra.com/serving/docs/en/master/index.html          redirect;
      rewrite ^/probability$              https://mindspore.myopeninfra.com/probability/docs/zh-CN/master/index.html   redirect;
      rewrite ^/probability/en(/|$)(.*)   https://mindspore.myopeninfra.com/probability/docs/en/master/index.html      redirect;
      rewrite ^/mindquantum$              https://mindspore.myopeninfra.com/mindquantum/docs/zh-CN/master/index.html   redirect;
      rewrite ^/mindquantum/en(/|$)(.*)   https://mindspore.myopeninfra.com/mindquantum/docs/en/master/index.html      redirect;
      rewrite ^/reinforcement$            https://mindspore.myopeninfra.com/reinforcement/docs/zh-CN/master/index.html redirect;
      rewrite ^/reinforcement/en(/|$)(.*) https://mindspore.myopeninfra.com/reinforcement/docs/en/master/index.html    redirect;
      rewrite ^/docs/api/(.*)/master/(.*) https://mindspore.myopeninfra.com/docs/$1/master/$2                          redirect;
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/custom-http-errors: '400,500,404'
  name: website-ingress
  namespace: mindspore-website
spec:
  tls:
    - hosts:
        - mindspore.myopeninfra.com
      secretName: website-tls
  rules:
    - host: mindspore.myopeninfra.com
      http:
        paths:
          - backend:
              serviceName: websiteservice
              servicePort: 80
            path: /
          - backend:
              serviceName: websiteservice
              servicePort: 80
            path: /robots.txt

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/upstream-vhost: dsapi.osinfra.cn
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: website-dsapi-ingress
  namespace: mindspore-website
spec:
  rules:
  - host: mindspore.myopeninfra.com
    http:
      paths:
      - paths:
        backend:
          serviceName: dsapi-service
          servicePort: 443
        path: /api-dsapi/(.*)
  tls:
  - hosts:
    - mindspore.myopeninfra.com
    secretName: website-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/upstream-vhost: search.mindspore.myopeninfra.com
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: website-search-ingress
  namespace: mindspore-website
spec:
  rules:
  - host: mindspore.myopeninfra.com
    http:
      paths:
      - paths:
        backend:
          serviceName: search-service
          servicePort: 443
        path: /api-search/(.*)
  tls:
  - hosts:
    - mindspore.myopeninfra.com
    secretName: website-tls
